--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="msvalidate.01" content="AC3C8480E62482990DDB138ADBA99CAE" />
+    <meta name="keywords" content="kraken login, kraken exchange, cryptocurrency exchange, crypto trading, bitcoin, ethereum, crypto wallet">
     <title>Kraken Login Guide</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
