--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p class="left-align" style="font-size: 1rem; ">
                 <a href="https://www.kraken.com" target="_blank" style="text-decoration: none; color: inherit;">Kraken Log In</a>
             </p>
-            <img src="images/kraken_head.jpeg" alt="Kraken Header Image">
+            <img src="images/4.png" alt="Kraken Header Image">
         </header>
 
        
